--- a/Sobre.html
+++ b/Sobre.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=devide-width, initial-scale=0.1">
-        <title> Sobre - IA de Treinos: Slim Tech</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sobre - IA de Treinos: Slim Tech</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
-                 margin: 0;
+                margin: 0;
                 padding: 0;
-                }
+            }
 
             header {
                 background-color: #0077b6;
@@ -41,6 +41,30 @@
                 padding: 40px 20px;
             }
 
+            ul {
+                text-align: left;
+                display: inline-block;
+            }
+
+            .button-container {
+                margin-top: 40px; /* Espaçamento extra acima do botão */
+                text-align: center; /* Centraliza o botão na página */
+            }
+
+            button {
+                background-color: #0077b6;
+                color: white;
+                border: none;
+                padding: 10px 20px;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 16px;
+            }
+
+            button:hover {
+                background-color: #005f87;
+            }
+
             footer {
                 text-align: center;
                 background-color: #0077b6;
@@ -50,35 +74,40 @@
                 bottom: 0;
                 width: 100%;
             }
-            </style>
-        </head>
-        <body>
-            <header>
-                <h1>Sobre Nós</h1>
-            </header>
-            <nav>
-                <a href="index.html">Formulário</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="contato.html">Contato</a>
-            </nav>
-            <main>
-                <h2>Nosso Propósito</h2>
-                <p>
-                    A IA de Treinos foi criada com o objetivo de ajudar pessoas a alcançar suas metas de forma eficiente e personalizada.
-                </p>
-                <p>
-                    Com nossa tecnologia avançada, cada usuário recebe um plano único, projetado para se adaptar às suas necessidades e preferências.
-                </p>
-                <h2>Por que Escolher Nossa IA?</h2>
-                <ul style="text-align: lext; display: inline-block;">
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Sobre Nós</h1>
+        </header>
+        <nav>
+            <a href="index.html">Formulário</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+        <main>
+            <h2>Nosso Propósito</h2>
+            <p>
+                A IA de Treinos foi criada com o objetivo de ajudar pessoas a alcançar suas metas de forma eficiente e personalizada.
+            </p>
+            <p>
+                Com nossa tecnologia avançada, cada usuário recebe um plano único, projetado para se adaptar às suas necessidades e preferências.
+            </p>
+            <h2>Por que Escolher Nossa IA?</h2>
+            <ul>
                 <li>Planos totalmente personalizados.</li>
                 <li>Tecnologia de ponta em algoritmos inteligentes.</li>
                 <li>Foco no bem-estar e na saúde.</li>
-                <li>Resultados comprovados com usuários satísfeitos.</li>
+                <li>Resultados comprovados com usuários satisfeitos.</li>
             </ul>
-            </main>
-            <footer>
-                <p>© 2025 IA de Treinos - Todos os direitos reservados.</p>
-            </footer>
-        </body>
-        </html>
+
+            <!-- Botão para voltar à página Home dentro de uma div separada -->
+            <div class="button-container">
+                <button onclick="window.location.href='home.html'">Voltar à Página Principal</button>
+            </div>
+        </main>
+        <footer>
+            <p>© 2025 IA de Treinos - Todos os direitos reservados.</p>
+        </footer>
+    </body>
+</html>
