--- a/index.html
+++ b/index.html
@@ -96,6 +96,32 @@
             bottom: 0;
             width: 100%;
         }
+        .spinner-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .spinner {
+      width: 60px;
+      height: 60px;
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid #3498db;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
     </style>
 </head>
 <body>
@@ -133,15 +159,19 @@
             <label for="meta_usuario">Meta do Usuário:</label>
             <textarea id="meta_usuario" name="meta_usuario" rows="4" placeholder="Descreva suas metas e objetivos aqui"></textarea>
 
-            <button type="submit">Enviar Dados</button>
+            <button id="btn_enviar" type="submit">Enviar Dados</button>
         </form>
 
         <div class="button-container">
             <button onclick="window.location.href='home.html'">Voltar à Home</button>
         </div>
+        <div id="loading" class="spinner-overlay">
+            <div class="spinner"></div>
+          </div>
     </main>
     <footer>
         <p>© 2025 IA de Treinos - Todos os direitos reservados.</p>
     </footer>
+    <script src="service.js"></script>
 </body>
 </html>
