--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             display: inline-block;
             text-align: left;
-            margin-bottom: 60px; /* Espaço abaixo do formulário */
+            margin-bottom: 60px;
         }
 
         label {
@@ -109,7 +109,7 @@
     </nav>
     <main>
         <h2>Nos conte mais sobre você!</h2>
-        <form action="processar_dados.html" method="post">
+        <form action="chat_ia.html" method="get">  <!-- Redirecionamento para a página do Chat -->
             <label for="altura">Altura (cm):</label>
             <input type="number" id="altura" name="altura" required>
 
@@ -137,7 +137,7 @@
         </form>
 
         <div class="button-container">
-            <button onclick="window.location.href='home.html'">Voltar à Home</button>
+            <button onclick="window.location.href='home.html'">Voltar à Página Principal</button>
         </div>
     </main>
     <footer>
