--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário - IA de Treinos: Slim Tech</title>
     <style>
+        /* Os estilos permanecem os mesmos, apenas os estilos para o spinner */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -96,32 +97,33 @@
             bottom: 0;
             width: 100%;
         }
+
         .spinner-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
 
-    .spinner {
-      width: 60px;
-      height: 60px;
-      border: 8px solid #f3f3f3;
-      border-top: 8px solid #3498db;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
+        .spinner {
+            width: 60px;
+            height: 60px;
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
@@ -135,7 +137,8 @@
     </nav>
     <main>
         <h2>Nos conte mais sobre você!</h2>
-        <form action="chat_ia.html" method="get">  <!-- Redirecionamento para a página do Chat -->
+        <!-- Removido o atributo action e o método de redirecionamento, o envio será manipulado por JS -->
+        <form id="formulario">
             <label for="altura">Altura (cm):</label>
             <input type="number" id="altura" name="altura" required>
 
@@ -167,7 +170,7 @@
         </div>
         <div id="loading" class="spinner-overlay">
             <div class="spinner"></div>
-          </div>
+        </div>
     </main>
     <footer>
         <p>© 2025 IA de Treinos - Todos os direitos reservados.</p>
